Fix gap between menu item and on-hover submenu

--- a/web/app/themes/radcliffe/style.css
+++ b/web/app/themes/radcliffe/style.css
@@ -480,7 +480,7 @@ a.search-toggle:hover {
 
 .main-menu > li:hover > ul {
 	opacity: 1;
-	top: 40px;
+	top: 20px;
 	left: 50%;
 }
 
